--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
   },
   "private": true,
   "dependencies": {
+    "mobx": "^6.13.3",
+    "mobx-react-lite": "^4.0.7",
     "react": "18.3.1",
     "react-dom": "18.3.1"
   },
